--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="The HighLands Forum | Developer Portfolio" />
     <meta property="og:description" content="Professional developer portfolio showcasing expertise, projects, and services" />
-    <meta property="og:image" content="/og-image.png" />
-    <meta property="og:url" content="https://thehighlandsforum.com" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="The Highlands Forum" />
+<meta property="og:image" content="https://api.screenshotone.com/take?access_key=v9xfYAq-zaHRrw&url=https://the-highlands-forum.vercel.app&full_page=true&viewport_width=1200&viewport_height=630" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
+
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
