--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="description" content="Professional developer portfolio showcasing expertise, projects, and services" />
     <meta name="author" content="The HighLands Forum" />
 
-    <!-- Open Graph / Social Media Meta Tags -->
-    <meta property="og:title" content="The HighLands Forum | Developer Portfolio" />
-    <meta property="og:description" content="Professional developer portfolio showcasing expertise, projects, and services" />
-    <meta property="og:url" content="https://the-highlands-forum.vercel.app" />
-    <meta property="og:image" content="https://api.screenshotone.com/take?access_key=v9xfYAq-zaHRrw&url=https://the-highlands-forum.vercel.app&full_page=true&viewport_width=1200&viewport_height=630&fresh=true" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+<!-- Open Graph / Social Media Meta Tags -->
+<meta property="og:title" content="The HighLands Forum | Developer Portfolio" />
+<meta property="og:description" content="Professional developer portfolio showcasing expertise, projects, and services" />
+<meta property="og:url" content="https://the-highlands-forum.vercel.app" />
+<meta property="og:image" content="https://api.screenshotone.com/take?access_key=v9xfYAq-zaHRrw&url=https://the-highlands-forum.vercel.app&full_page=true&viewport_width=1200&viewport_height=630" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
     
     
     <!-- Favicon -->
