--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="The HighLands Forum | Developer Portfolio" />
+<meta name="twitter:description" content="Professional developer portfolio showcasing expertise, projects, and services" />
+<meta name="twitter:image" content="https://api.screenshotone.com/take?access_key=v9xfYAq-zaHRrw&url=https://the-highlands-forum.vercel.app&full_page=true&viewport_width=1200&viewport_height=630" />
+<meta name="twitter:site" content="@leejoneake1" />
+<meta name="twitter:creator" content="@leejoneske1" /> 
     
     
     <!-- Favicon -->
