--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
     <meta name="description" content="Professional developer portfolio showcasing expertise, projects, and services" />
     <meta name="author" content="The HighLands Forum" />
 
-<!-- Open Graph / Social Media Meta Tags -->
+
+
+<!-- Open Graph Meta Tags (Facebook, WhatsApp, LinkedIn, etc.) -->
 <meta property="og:title" content="The HighLands Forum | Developer Portfolio" />
 <meta property="og:description" content="Professional developer portfolio showcasing expertise, projects, and services" />
 <meta property="og:url" content="https://the-highlands-forum.vercel.app" />
-<meta property="og:image" content="https://api.screenshotone.com/take?access_key=v9xfYAq-zaHRrw&url=https://the-highlands-forum.vercel.app&full_page=true&viewport_width=1200&viewport_height=630" />
+<meta property="og:image" content="https://phantomjscloud.com/api/browser/v2/a-demo-key-with-low-quota-per-ip-address/?request=%7B%22url%22%3A%22https%3A%2F%2Fthe-highlands-forum.vercel.app%22%2C%22renderType%22%3A%22png%22%2C%22outputAsJson%22%3Afalse%2C%22viewport%22%3A%7B%22width%22%3A1200%2C%22height%22%3A630%7D%7D" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="The HighLands Forum" />
 
-    <!-- Twitter Card Meta Tags -->
+<!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="The HighLands Forum | Developer Portfolio" />
 <meta name="twitter:description" content="Professional developer portfolio showcasing expertise, projects, and services" />
-<meta name="twitter:image" content="https://api.screenshotone.com/take?access_key=v9xfYAq-zaHRrw&url=https://the-highlands-forum.vercel.app&full_page=true&viewport_width=1200&viewport_height=630" />
-<meta name="twitter:site" content="@leejoneake1" />
-<meta name="twitter:creator" content="@leejoneske1" /> 
+<meta name="twitter:image" content="https://phantomjscloud.com/api/browser/v2/a-demo-key-with-low-quota-per-ip-address/?request=%7B%22url%22%3A%22https%3A%2F%2Fthe-highlands-forum.vercel.app%22%2C%22renderType%22%3A%22png%22%2C%22outputAsJson%22%3Afalse%2C%22viewport%22%3A%7B%22width%22%3A1200%2C%22height%22%3A630%7D%7D" />
+<meta name="twitter:site" content="@leejoneske1" /> <!-- Replace with your Twitter handle -->
+<meta name="twitter:creator" content="@leejoneske1" /> <!-- Replace with your Twitter handle -->
     
     
     <!-- Favicon -->
