--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Professional developer portfolio showcasing expertise, projects, and services" />
     <meta name="author" content="The HighLands Forum" />
 
-    <!-- Open Graph Meta Tags -->
+    <!-- Open Graph MeTa Tags -->
     <meta property="og:title" content="The HighLands Forum | Developer Portfolio" />
     <meta property="og:description" content="Professional developer portfolio showcasing expertise, projects, and services" />
     <meta property="og:url" content="https://the-highlands-forum.vercel.app" />
