--- a/index.html
+++ b/index.html
@@ -1,15 +1,87 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Highlands Forum</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <!-- Primary Meta Tags -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Highlands Forum | Expert Web & Mobile Developer for Hire</title>
+  <meta name="description" content="Professional full-stack developer specializing in React, Flutter, and Node.js. Build scalable web/mobile apps for startups and businesses worldwide. Get a free quote today.">
+  <meta name="keywords" content="hire web developer, freelance mobile app developer, React expert, Flutter developer, Node.js, full-stack developer, e-commerce solutions">
+  <meta name="author" content="The Highlands Forum">
+
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:title" content="Hire a Pro Developer | The Highlands Forum">
+  <meta property="og:description" content="Need a high-performance web or mobile app? I build fast, scalable solutions for global clients. Contact for a free quote.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://the-highlands-forum.vercel.app/">
+  <meta property="og:image" content="https://the-highlands-forum.vercel.app/social-preview.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="The Highlands Forum">
+
+  <!-- Twitter Card (For Tech Clients) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Freelance Full-Stack Developer | React + Flutter Specialist">
+  <meta name="twitter:description" content="From MVP to production-ready apps. Let’s build your project. Based in Nairobi, serving clients worldwide.">
+  <meta name="twitter:image" content="https://the-highlands-forum.vercel.app/social-preview.jpg">
+
+  <!-- Favicons & PWA -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <meta name="theme-color" content="#2563eb">
+
+  <!-- Preload & Performance -->
+  <link rel="preload" href="/src/main.tsx" as="script">
+  <link rel="preconnect" href="https://cdn.gpteng.co">
+
+  <!-- Canonical URL (SEO) -->
+  <link rel="canonical" href="https://the-highlands-forum.vercel.app/" />
+
+  <!-- Google Analytics (Optional) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXX');
+  </script>
+</head>
+<body>
+  <div id="root"></div>
+  
+  <!-- GPT Engineer (Loaded Async) -->
+  <script src="https://cdn.gpteng.co/gptengineer.js" type="module" async></script>
+  
+  <!-- Main App -->
+  <script type="module" src="/src/main.tsx"></script>
+
+  <!-- Schema.org for Freelance Developer (Global SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FreelanceWebDeveloper",
+    "name": "The Highlands Forum",
+    "url": "https://the-highlands-forum.vercel.app/",
+    "logo": "https://the-highlands-forum.vercel.app/logo.svg",
+    "description": "Professional full-stack developer building web and mobile apps for global clients.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Nairobi",
+      "addressRegion": "Nairobi",
+      "addressCountry": "KE"
+    },
+    "offers": {
+      "@type": "Offer",
+      "name": "Development Services",
+      "priceCurrency": "USD",
+      "url": "https://the-highlands-forum.vercel.app/#contact"
+    },
+    "sameAs": [
+      "https://github.com/leejoneske",
+      "https://linkedin.com/in/leejoneske"
+    ]
+  }
+  </script>
+</body>
 </html>
