--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Favicons & PWA -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <meta name="theme-color" content="#2563eb">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Preload & Performance -->
   <link rel="preload" href="/src/main.tsx" as="script">
